--- a/styles/style.css
+++ b/styles/style.css
@@ -1994,6 +1994,12 @@ font-size: 16px;
   .event-main-text{
     font-size: 26px;
   }
+  .timetable-name{
+    font-size: 26px;
+  }
+  .timetable-date{
+    font-size: 16px;
+  }
   .timetable-container-workout{
     grid-template-columns: repeat(2, 1fr) auto;
     grid-template-rows: 240px 224px auto;
