--- a/styles/style.css
+++ b/styles/style.css
@@ -1713,6 +1713,9 @@ footer {
   display: flex;
   justify-content: space-between;
 }
+.footer-end a{
+  color: var(--dark, #2B3541);
+}
 .footer-end span {
   opacity: 0.3;
   color: #2b3541;
