--- a/styles/style.css
+++ b/styles/style.css
@@ -207,7 +207,7 @@ transform: translate(-35%, -3px);
   opacity: 1;
 }
 .card-background-maraphon {
-  background-image: url(../images/trainer.png);
+  background-image: url(../images/no1.png);
 
 }
 .card-background-vebinar {
