--- a/styles/style.css
+++ b/styles/style.css
@@ -801,6 +801,7 @@ display: none;
 @media (max-width:1025px) {
   .container{
     max-width: 1024px;
+    margin: 0 10px;
   }
   .training-girl img{
 max-width: 100%;
